Bug 167541 - Writer hangs on loading Persian DOC file
Summary: Writer hangs on loading Persian DOC file
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Jonathan Clark
URL:
Whiteboard: target:26.2.0 target:25.8.1 target:25...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Performance
  Show dependency treegraph
 
Reported: 2025-07-17 10:40 UTC by Hossein
Modified: 2025-08-08 10:59 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
DOC that hands on load (608.50 KB, application/msword)
2025-07-17 10:40 UTC, Hossein
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Hossein 2025-07-17 10:40:19 UTC
Created attachment 201835 [details]
DOC that hands on load

Description:
Loading a Persian language DOC file in Writer leads to hang

Steps to Reproduce:
1. Open the DOC attachment

Actual Results:
Writer hangs

Expected Results:
Writer should not hang


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 38ae7a6e1cb9adfd3fe67be409fb7b5bcaba3c82
CPU threads: 12; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Hossein 2025-07-17 10:41:23 UTC
The bug is introduced with below commit, and is a regression as it does not happen before this commit:

commit 38ae7a6e1cb9adfd3fe67be409fb7b5bcaba3c82
author	Jonathan Clark <jonathan@libreoffice.org>	Thu Jul 10 13:51:18 2025 -0600

tdf#167297 sw: Add support for DOC/DOCX script type hinting
Comment 2 Jonathan Clark 2025-07-17 14:54:37 UTC
I was able to reproduce the hang. Confirming.
Comment 3 Commit Notification 2025-07-17 20:28:09 UTC
Jonathan Clark committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f636757533cfca575820c919153aa5c9a02abcae

tdf#167541 sw: Fix hang laying out textboxes with empty script hints

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Hossein 2025-07-18 13:22:51 UTC
Thanks Jonathan,
Verifying the fix with the latest LO 26.2 dev master:

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 2974d7c2f64eb44278ed5b7aa485f2be3172e62c
CPU threads: 12; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 5 Commit Notification 2025-08-07 08:24:52 UTC
Jonathan Clark committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/a8fe8c02a2d075e4ee4d316fb16126846418c168

tdf#167541 sw: Fix hang laying out textboxes with empty script hints

It will be available in 25.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-08-08 10:59:10 UTC
Jonathan Clark committed a patch related to this issue.
It has been pushed to "libreoffice-25-8-0":

https://git.libreoffice.org/core/commit/dd65df5d07f3773bc17a01129e0ba7b85ab00c3a

tdf#167541 sw: Fix hang laying out textboxes with empty script hints

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.