tdf#167541 sw: Fix hang laying out textboxes with empty script hints

Certain DOC files may contain zero-length sprmCIdctHint runs.
Previously, the EE implementation of style:script-type was not robust
against such zero-length spans and would loop infinitely upon
encountering one.

Change-Id: I7178a89b2688956482ceb790dd05523034019e2e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/188020
Tested-by: Jenkins
Reviewed-by: Jonathan Clark <jonathan@libreoffice.org>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/188685